feat: 支持springboot3, 修复相关CVE漏洞